2001-05-07  Mark Mitchell  <mark@codesourcery.com>

	* splay-tree.h (splay_tree_max): New function.
	(splay_tree_min): Likewise.

2001-04-27  Johan Rydberg  <jrydberg@opencores.org>

        * dis-asm.h (print_insn_openrisc): Add prototype.

2001-04-15  Daniel Berlin  <dan@cgsoftware.com>

	* ternary.h: New file - Ternary search tree header.

2001-04-13  Jakub Jelinek  <jakub@redhat.com>

	* bfdlink.h (bfd_link_discard): Add discard_sec_merge.

2001-04-03  Zack Weinberg  <zackw@stanford.edu>

	* ansidecl.h: All logic from gcc/gansidecl.h moved here.

2001-03-31  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* libiberty.h (alloca): Handle setting C_ALLOCA.

2001-03-20  Jim Blandy  <jimb@redhat.com>

	* demangle.h (enum gnu_v3_constructor_kinds,
	is_gnu_v3_mangled_ctor, enum gnu_v3_destructor_kinds,
	is_gnu_v3_mangled_dtor): New declarations.

2001-03-14  Nick Clifton  <nickc@redhat.com>

	* ansidecl.h: Fix copyright dates.
	* demangle.h: Fix copyright dates.
	* floatformat.h: Fix copyright dates.
	* fnmatch.h: Fix copyright dates.
	* getopt.h: Fix copyright dates.
	* libiberty.h: Add FSF copyright notice.
	* md5.h: Fix copyright dates.
	* obstack.h: Fix copyright dates.
	* splay-tree.h: Fix copyright dates.

2001-03-10  Neil Booth  <neil@daikokuya.demon.co.uk>
	    John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* libiberty.h: Add lbasename.

2001-03-06  Zack Weinberg  <zackw@stanford.edu>

	* libiberty.h: Prototype C_alloca; define alloca to either
	__builtin_alloca or C_alloca as appropriate.

2001-03-01  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* safe-ctype.h (_sch_test): Cast enum bit to unsigned short int for pcc
	compatibility.

2001-02-18  lars brinkhoff  <lars@nocrew.org>

	* dis-asm.h: Add PDP-11 target.

2001-02-09  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* dis-asm.h: Add linux target for S/390.

2001-01-11  Peter Targett  <peter.targett@arccores.com>

	* dis-asm.h (arc_get_disassembler): Correct declaration.
